--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.main{
+  padding: 1em;
+}
